# diamond_problem-

./: CMakeLists.txt  README.md  calc_normal.cpp  cmp_poly.cpp  compare_contours.py  compare_poly.py  compile.sh  con_to_txt.cpp  final_test.sh  find_rundist.cpp  get_all_grid.sh  get_contour.cpp  gnu_plot.gp  gorizontal_compare.cpp  gorizontal_compare.txt  gplot.plot  makefile_getb  makefile_transformb  obj_to_ply.cpp  obj_to_txt.cpp  plot_comtours.py  plot_obj.py  ply_to_obj.cpp  report_1.docx  simplify.cpp  splot.cpp  spoil_face.cpp  sym_diff.cpp  sym_diff_compare.txt  test_file.cpp  time.txt  transform_contour.cpp  transform_model.cpp  transform_model.py  txt_to_con.cpp  txt_to_obj.cpp
InitialModels/: InitialModel10  InitialModel11  InitialModel12  InitialModel2  InitialModel3  InitialModel4  InitialModel5  InitialModel6  InitialModel7  InitialModel8  InitialModel9
course_work/: main.aux  main.fdb_latexmk  main.fls  main.tex
cpp/: function.cpp  gplot.gp  header.h  main.cpp
cpp/examples/: decagon_intersection.txt  in_decagon.txt  in_pentagon.txt  in_triangle.txt  merge2d-cont000  out_decagon.txt  out_triangle.txt  poly2d-cont000  triangle_intersection.txt
cpp/merge_12/: a.out  b.out  function_.cpp  header.h  hold.cpp  main.cpp  spoil.cpp
cpp/merge_12/include/: edge.h  functions.h  geom.h  point2d.h  point3d.h  segment2d.h
cpp/merge_12/init_examples/: contour_0  contour_1  contour_10  contour_11  contour_12  contour_13  contour_14  contour_15  contour_16  contour_17  contour_18  contour_19  contour_2  contour_20  contour_21  contour_22  contour_23  contour_24  contour_25  contour_26  contour_27  contour_28  contour_29  contour_3  contour_30  contour_4  contour_5  contour_6  contour_7  contour_8  contour_9  script
cpp/merge_12/res_examples/: contour_0  contour_1  contour_10  contour_11  contour_12  contour_14  contour_15  contour_16  contour_17  contour_18  contour_19  contour_2  contour_20  contour_21  contour_22  contour_23  contour_24  contour_25  contour_26  contour_27  contour_28  contour_29  contour_3  contour_30  contour_4  contour_6  contour_7  contour_8  contour_9
cpp/merge_12/source/: functions.cpp  geom.cpp  point2d.cpp  segment2d.cpp
cpp/problem_1/: function.cpp  gplot.gp
cpp/problem_1/examples/: out_poly2d-cont000
cpp/problem_2/: .vimrc  a.out  geom.cpp  geom.h  gplot.gp  main.cpp  makefile1  makefile2  points.cpp  points.h
cpp/problem_2/examples/: points2d_after.txt  points2d_before.txt  points3d.txt
examples/: in_decagon.txt  in_pentagon.txt  in_triangle.txt  out_decagon.txt  out_pentagon.txt  out_triangle.txt
extra_features/: compile.sh  gorizontal_compare_debug.cpp  spoil_face.cpp  sym_diff_debug.cpp  sym_diff_debug_cgal.cpp  trasform_model_old.cpp
include/: .rw_functions.hpp.swp  file_formats.hpp  geom_functions.hpp  point2d.hpp  point3d.hpp  rw_functions.hpp  segment2d.hpp
merge_12/: get  get_contour.cpp  makefile_get  makefile_transform  tran
merge_12/include/: geom_functions.h  point2d.h  segment2d.h
merge_12/init_examples/: contour_0  contour_1  contour_10  contour_11  contour_12  contour_13  contour_14  contour_15  contour_16  contour_17  contour_18  contour_19  contour_2  contour_20  contour_21  contour_22  contour_23  contour_24  contour_25  contour_26  contour_27  contour_28  contour_29  contour_3  contour_30  contour_4  contour_5  contour_6  contour_7  contour_8  contour_9
merge_12/res_examples/: contour_0  contour_1  contour_10  contour_11  contour_12  contour_13  contour_14  contour_15  contour_16  contour_17  contour_18  contour_19  contour_2  contour_20  contour_21  contour_22  contour_23  contour_24  contour_25  contour_26  contour_27  contour_28  contour_29  contour_3  contour_30  contour_4  contour_5  contour_6  contour_7  contour_8  contour_9  contour_calm  try
merge_12/source/: geom_functions.cpp  point2d.cpp  rw_functions.cpp  segment2d.cpp
python/: problem_1.py
scripts_bash/: compile.sh  get_all_grid_tran.sh  take_photos.sh  tran_models.sh
source/: .rw_functions.cpp.swp  file_formats.cpp  geom_functions.cpp  point3d.cpp  rw_functions.cpp
step1/: get_contour.cpp  makefile_getb  makefile_transformb  transform_contour.cpp
step1/InitialModels/: InitialModel1
step1/include/: geom_functions.hpp  rw_functions.h  rw_functions.hpp
step1/source/: edge.cpp  geom_functions.cpp  point2d.cpp  point3d.cpp  rw_functions.cpp  segment2d.cpp
step2/: spoil_face.cpp
